[gd_scene load_steps=23 format=2]

[ext_resource path="res://UI/Sprites/heart-full-7.png" type="Texture" id=1]
[ext_resource path="res://UI/Sprites/heart-full-8.png" type="Texture" id=2]
[ext_resource path="res://UI/Sprites/heart-full-1.png" type="Texture" id=3]
[ext_resource path="res://UI/Sprites/heart-full-2.png" type="Texture" id=4]
[ext_resource path="res://UI/Sprites/heart-full-3.png" type="Texture" id=5]
[ext_resource path="res://UI/Sprites/heart-full-4.png" type="Texture" id=6]
[ext_resource path="res://UI/Sprites/heart-full-5.png" type="Texture" id=7]
[ext_resource path="res://UI/Sprites/heart-full-6.png" type="Texture" id=8]
[ext_resource path="res://UI/Sprites/heart-smaller.png" type="Texture" id=9]
[ext_resource path="res://UI/UI.gd" type="Script" id=10]
[ext_resource path="res://Inventory/Inventory.tscn" type="PackedScene" id=11]
[ext_resource path="res://Fonts/ThaleahFat.ttf" type="DynamicFontData" id=12]
[ext_resource path="res://UI/Sprites/arrow.png" type="Texture" id=13]

[sub_resource type="AnimatedTexture" id=1]
frames = 8
pause = true
frame_0/texture = ExtResource( 3 )
frame_1/texture = ExtResource( 4 )
frame_1/delay_sec = 0.0
frame_2/texture = ExtResource( 5 )
frame_2/delay_sec = 0.0
frame_3/texture = ExtResource( 6 )
frame_3/delay_sec = 0.0
frame_4/texture = ExtResource( 7 )
frame_4/delay_sec = 0.0
frame_5/texture = ExtResource( 8 )
frame_5/delay_sec = 0.0
frame_6/texture = ExtResource( 1 )
frame_6/delay_sec = 0.0
frame_7/texture = ExtResource( 2 )
frame_7/delay_sec = 0.0

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.705882, 0.537255, 0.0823529, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 0, 0, 0.6 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="DynamicFont" id=4]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 12 )

[sub_resource type="DynamicFont" id=5]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 12 )

[sub_resource type="DynamicFont" id=6]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 12 )

[sub_resource type="Animation" id=7]
resource_name = "Pulse"
length = 1.5
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.75, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="DynamicFont" id=8]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 12 )

[sub_resource type="Animation" id=9]
resource_name = "Blink"
length = 4.0
tracks/0/type = "value"
tracks/0/path = NodePath("SavingLabel:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2, 3, 4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0.6 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0.6 ), Color( 1, 1, 1, 0 ) ]
}

[node name="UI" type="CanvasLayer"]
script = ExtResource( 10 )

[node name="Health" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MaxHealth" type="TextureRect" parent="Health"]
modulate = Color( 1, 1, 1, 0.4 )
margin_left = 8.0
margin_top = 8.0
margin_right = 8.0
margin_bottom = 21.0
rect_min_size = Vector2( 0, 13 )
texture = ExtResource( 9 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CurrentHealth" type="TextureRect" parent="Health"]
margin_left = 8.0
margin_top = 8.0
margin_right = 8.0
margin_bottom = 21.0
rect_min_size = Vector2( 0, 13 )
texture = SubResource( 1 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Inventory" parent="." instance=ExtResource( 11 )]
margin_left = 0.33519
margin_top = -0.471939
margin_right = 0.335175
margin_bottom = -0.471939
mouse_filter = 2

[node name="Experience" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProgressBar" type="ProgressBar" parent="Experience"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -46.8
margin_top = -23.6
margin_right = 46.7
margin_bottom = -9.60001
rect_scale = Vector2( 1, 0.11 )
mouse_filter = 2
custom_styles/fg = SubResource( 2 )
custom_styles/bg = SubResource( 3 )
custom_fonts/font = SubResource( 4 )
value = 62.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Experience"]
margin_left = 113.0
margin_top = 152.0
margin_right = 426.0
margin_bottom = 167.0
rect_scale = Vector2( 0.3, 0.3 )
custom_fonts/font = SubResource( 5 )
text = "Level 2 - 100 / 724"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AddStat" type="ColorRect" parent="Experience"]
visible = false
modulate = Color( 1, 1, 1, 0.890807 )
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -5.5
margin_top = -42.0
margin_right = 5.5
margin_bottom = -31.0
mouse_filter = 1
mouse_default_cursor_shape = 2
color = Color( 0.278431, 0.627451, 0.247059, 1 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Experience/AddStat"]
margin_left = 1.12248
margin_top = -2.28062
margin_right = 11.1225
margin_bottom = 12.7194
custom_fonts/font = SubResource( 6 )
text = "+"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Experience/AddStat"]
show_behind_parent = true
anchor_left = -0.114
anchor_top = -0.053
anchor_right = 1.068
anchor_bottom = 1.129
margin_left = 0.00400007
margin_top = -0.00299996
margin_right = 0.0019989
margin_bottom = -0.00500107
mouse_filter = 1
color = Color( 0, 0, 0, 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Experience/AddStat"]
anims/Pulse = SubResource( 7 )

[node name="Timer" type="Timer" parent="Experience/AddStat"]
wait_time = 2.0
autostart = true

[node name="ExitArrow" type="Control" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -8.0
margin_top = 8.0
margin_right = 8.0
margin_bottom = 16.0
rect_min_size = Vector2( 16, 16 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Arrow" type="TextureRect" parent="ExitArrow"]
rect_min_size = Vector2( 16, 16 )
rect_scale = Vector2( 0.75, 0.75 )
rect_pivot_offset = Vector2( 8, 8 )
texture = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StatusTextAnchor" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_top = -53.0
margin_bottom = -53.0
grow_horizontal = 2
grow_vertical = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SaveIndicator" type="Control" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_bottom = -8.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SavingLabel" type="Label" parent="SaveIndicator"]
self_modulate = Color( 1, 1, 1, 0 )
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = -3.0
margin_top = -11.0
margin_right = 49.0
margin_bottom = 4.0
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = SubResource( 8 )
text = "Saving..."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="SaveIndicator"]
anims/Blink = SubResource( 9 )
[connection signal="gui_input" from="Experience/AddStat" to="." method="_on_AddStat_gui_input"]
[connection signal="mouse_entered" from="Experience/AddStat" to="." method="_on_AddStat_mouse_entered"]
[connection signal="mouse_exited" from="Experience/AddStat" to="." method="_on_AddStat_mouse_exited"]
[connection signal="timeout" from="Experience/AddStat/Timer" to="." method="_on_Timer_timeout"]
